--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo&family=Julius+Sans+One&family=Montserrat:wght@400;500;600&family=Mulish&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 body, html {
   margin: 0;
   padding: 0;
